--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,6 +6,9 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
 
     steps:
       - name: Check out code
@@ -18,6 +21,9 @@ jobs:
 
       - name: Build app
         run: ./scripts/buildprod.sh
+
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
 
       - name: auth
         uses: 'google-github-actions/auth@v2'
