--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
         run: ./scripts/buildprod.sh
 
       - name: Run migrations
-        run: ./scripts/migrateup.sh
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest && ./scripts/migrateup.sh
 
       - name: auth
         uses: 'google-github-actions/auth@v2'
